[package]
name = "press_deployer_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.10", features = ["v4"] }
thiserror = "1.0"
press_common = { path = "../common" }
hex = "0.4"
getrandom = "0.2"
