[package]
name = "press_gateway_api"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.14", default-features = false, features = ["abigen","rustls","ws"] }
once_cell = "1.19"
sha3 = "0.10"
hex = "0.4"
chrono = "0.4"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
http = "1"

sha2 = "0.10"
hex = "0.4"
