[package]
name = "press_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10"
hex = "0.4"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features=["serde"] }
reqwest = { version = "0.12", features=["json","rustls-tls"] }
axum = "0.7"
serde = { version = "1", features=["derive"] }
serde_json = "1"
tokio = { version = "1", features=["rt-multi-thread","macros","time"] }
sqlx = { version = "0.7", features=["runtime-tokio-rustls","postgres","sqlite","macros","chrono","json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
time = "0.3"
