[package]
name = "oracle_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features=["json","rustls-tls"] }
anyhow = "1"
chrono = { version = "0.4", features=["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
urlencoding = "2.1"
regex = "1"
html_escape = "0.2"
