[package]
name = "press_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
